@@ -1250,7 +1250,7 @@ begin
   content( e, "pragma suppress( all_priority_todos_for_release ) - all todo's allowed late in SDLC" );
   content( e, "pragma suppress( low_priority_todos_for_release ) - low priority todo's allowed late in SDLC" );
   content( e, "pragma suppress( suppress_no_empty_command_substitutions ) - allow empty strings in `..` and $(..)" );
-  content( e, "pragma template( css|html|js|json|text|wml|xml|yaml [, path] ) - script is acting as a template processor" );
+  content( e, "pragma template( css|html|js|json|text|toml|wml|xml|yaml [, path] ) - script is acting as a template processor" );
   content( e, "pragma test( condition [, " & ASCII.Quotation & "description" & ASCII.Quotation & "] ) - with --test, execute test commands" );
   content( e, "pragma test_report( text|xml [, " & ASCII.Quotation & "filepath" & ASCII.Quotation & "] ) - type and location of test report" );
   content( e, "pragma test_result( condition ) - with --test, display warning on condition failure" );
@@ -1258,7 +1258,7 @@ begin
   content( e, "pragma unchecked_import( shell | cgi | local_memcache | memcache | session, var ) - import without checking for existence" );
   content( e, "pragma unchecked_volatile( var [,ttl] ) - like volatile, but not an error to use in expressions" );
   content( e, "pragma uninspect( var ) - undo pragma inspect" );
-  content( e, "pragma unrestricted_template( css|html|js|json|text|wml|xml|yaml [, path] ) - run template without a restricted shell" );
+  content( e, "pragma unrestricted_template( css|html|js|json|text|toml|wml|xml|yaml [, path] ) - run template without a restricted shell" );
   content( e, "pragma volatile( var [,ttl] ) - load value from environment on every access" );
      seeAlso( e, "doc/ref_pragmas.html" );
      endHelp( e );
