@@ -227,7 +227,7 @@ allowAllTodosForRelease          : boolean := false; -- pragma suppress
 
 type templateTypes is (noTemplate, htmlTemplate, textTemplate,
 cssTemplate, jsTemplate, jsonTemplate, wmlTemplate, xmlTemplate,
-yamlTemplate );
+yamlTemplate, tomlTemplate );
 
 depreciatedMsg   : unbounded_string := null_unbounded_string; -- pragma dep.
 annotationsFound : boolean := false; -- pragma annotations_not_optional
